<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.screens.myprofile.MyProfileFragment">

    <View
        android:id="@+id/view_topBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bottomBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_topBackground" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/my_profile_layout_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/my_profile_layout_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/my_profile_layout_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/my_profile_layout_margin" />

    <TextView
        android:id="@+id/textView_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile_activity_settings"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@id/button_log_out"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="@id/button_log_out" />

    <Button
        android:id="@+id/button_log_out"
        style="@style/Assignment1.BorderedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/my_profile_button_log_out_padding_horizontal"
        android:text="@string/my_profile_activity_log_out"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toTopOf="@id/topGuideline"
        app:strokeColor="?attr/colorOutline" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView_profileImage"
        android:layout_width="@dimen/my_profile_picture_size"
        android:layout_height="@dimen/my_profile_picture_size"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_log_out"
        app:shapeAppearanceOverlay="@style/rounded"
        app:srcCompat="@drawable/default_profile_image" />

    <TextView
        android:id="@+id/textView_nameSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/my_profile_textView_nameSurname_top_margin"
        android:text="Name Surname"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@id/imageView_profileImage"
        app:layout_constraintStart_toStartOf="@id/imageView_profileImage"
        app:layout_constraintTop_toBottomOf="@id/imageView_profileImage"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView_career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/my_profile_textView_career_top_margin"
        android:text="@string/career"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="@id/textView_nameSurname"
        app:layout_constraintStart_toStartOf="@id/textView_nameSurname"
        app:layout_constraintTop_toBottomOf="@id/textView_nameSurname" />

    <TextView
        android:id="@+id/textView_homeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/my_profile_textView_address_top_margin"
        android:text="@string/home_address"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="@id/textView_career"
        app:layout_constraintStart_toStartOf="@id/textView_career"
        app:layout_constraintTop_toBottomOf="@id/textView_career" />

    <TextView
        android:id="@+id/textView_goToSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/my_profile_textView_settingsTip_bottom_margin"
        android:text="@string/my_profile_activity_go_settings_tip"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintBottom_toTopOf="@id/button_editProfile"
        app:layout_constraintEnd_toEndOf="@id/button_editProfile"
        app:layout_constraintStart_toStartOf="@id/button_editProfile" />

    <Button
        android:id="@+id/button_editProfile"
        style="@style/Assignment1.BorderedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/my_profile_button_editProfile_bottom_margin16dp"
        android:text="@string/my_profile_activity_edit_profile"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintBottom_toTopOf="@id/button_viewMyContacts"
        app:layout_constraintEnd_toEndOf="@id/button_viewMyContacts"
        app:layout_constraintStart_toStartOf="@id/button_viewMyContacts"
        app:strokeColor="?attr/colorOnBackground" />

    <Button
        android:id="@+id/button_viewMyContacts"
        style="@style/Assignment1.ColorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorAccent"
        android:letterSpacing="0.09"
        android:text="@string/my_profile_activity_view_my_contacts"
        android:textAllCaps="true"
        android:textAppearance="?attr/textAppearanceLabelMedium"
        android:textColor="?attr/colorOnTertiary"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/my_profile_imageView_socialLogo1_bottom_margin"
        android:orientation="horizontal"
        app:constraint_referenced_ids="imageView_socialLogo1,imageView_socialLogo2,imageView_socialLogo3"
        app:flow_horizontalGap="@dimen/my_profile_icons_flow_gap"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@id/button_editProfile"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline" />

    <ImageView
        android:id="@+id/imageView_socialLogo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/facebook"
        android:src="@drawable/facebook_logo" />

    <ImageView
        android:id="@+id/imageView_socialLogo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/linkedin"
        android:src="@drawable/linkedin_logo" />

    <ImageView
        android:id="@+id/imageView_socialLogo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/instagram"
        android:src="@drawable/instagram_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>