<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceVariant"
    tools:context=".ui.auth.logIn.LogInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/auth_layout_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/auth_layout_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/auth_layout_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/auth_layout_margin" />

    <TextView
        android:id="@+id/textViewLetsGetAcquainted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_label1_top_margin"
        android:text="@string/log_in_fragment_hello"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFillOutTheProfileTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_label2_top_margin"
        android:text="@string/log_in_fragment_enter_your_credentials"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="@id/textViewLetsGetAcquainted"
        app:layout_constraintStart_toStartOf="@id/textViewLetsGetAcquainted"
        app:layout_constraintTop_toBottomOf="@id/textViewLetsGetAcquainted" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutUserName"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_inputLayout_email_top_margin"
        android:hint="@string/auth_activity_email"
        android:inputType="textEmailAddress"
        android:textColorHint="?attr/colorOutline"
        app:boxBackgroundColor="?attr/colorSurfaceVariant"
        app:errorIconDrawable="@null"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintTextAppearance="?attr/textAppearanceLabelSmall"
        app:hintTextColor="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/textViewFillOutTheProfileTip">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEditTextUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="@dimen/auth_editText_padding"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPhone"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_inputLayout_password_top_margin"
        android:hint="@string/auth_activity_password"
        android:inputType="textPassword"
        android:textColorHint="?attr/colorOutline"
        app:boxBackgroundColor="?attr/colorSurfaceVariant"
        app:errorIconDrawable="@null"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintTextAppearance="?attr/textAppearanceLabelSmall"
        app:hintTextColor="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEditTextPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingTop="@dimen/auth_editText_padding"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_checkBox_remember_top_margin"
        android:background="?android:attr/selectableItemBackground"
        android:button="@drawable/checkbox_remember_me"
        android:paddingStart="@dimen/checkbox_gap"
        android:text="@string/auth_activity_remember_me"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOutline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPhone"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_activity_forgot_password"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxRemember"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toTopOf="@id/checkBoxRemember" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Assignment1.BorderedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:layout_marginBottom="@dimen/auth_button_register_bottom_margin"
        android:paddingVertical="16dp"
        android:text="@string/log_in_fragment_login"
        android:letterSpacing="0.05"
        android:textAllCaps="true"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@id/textViewSignUp"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:strokeColor="?attr/colorAccent" />


    <TextView
        android:id="@+id/textViewNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_activity_no_account"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOutline"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@id/textViewSignUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_textView_SignIn_start_margin"
        android:text="@string/log_in_fragment_sign_up"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewNoAccount"
        app:layout_constraintTop_toTopOf="@id/textViewNoAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>