<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceVariant"
    tools:context=".presentation.auth.signUp.SignUpFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/auth_layout_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/auth_layout_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/auth_layout_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/auth_layout_margin" />

    <TextView
        android:id="@+id/textViewLetsGetAcquainted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_label1_top_margin"
        android:text="@string/auth_activity_lets_get_acquainted"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFillOutTheProfileTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_label2_top_margin"
        android:text="@string/auth_activity_fill_out_the_profile_tip"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="@id/textViewLetsGetAcquainted"
        app:layout_constraintStart_toStartOf="@id/textViewLetsGetAcquainted"
        app:layout_constraintTop_toBottomOf="@id/textViewLetsGetAcquainted" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_inputLayout_email_top_margin"
        android:hint="@string/auth_activity_email"
        android:inputType="textEmailAddress"
        android:textColorHint="?attr/colorOutline"
        app:boxBackgroundColor="?attr/colorSurfaceVariant"
        app:errorIconDrawable="@null"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintTextAppearance="?attr/textAppearanceLabelSmall"
        app:hintTextColor="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/textViewFillOutTheProfileTip">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="@dimen/auth_editText_padding"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        style="@style/CustomTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_inputLayout_password_top_margin"
        android:hint="@string/auth_activity_password"
        android:inputType="textPassword"
        android:textColorHint="?attr/colorOutline"
        app:boxBackgroundColor="?attr/colorSurfaceVariant"
        app:errorIconDrawable="@null"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="false"
        app:hintTextAppearance="?attr/textAppearanceLabelSmall"
        app:hintTextColor="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingTop="@dimen/auth_editText_padding"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_checkBox_remember_top_margin"
        android:background="?android:attr/selectableItemBackground"
        android:button="@drawable/checkbox_remember_me"
        android:paddingStart="@dimen/checkbox_gap"
        android:text="@string/auth_activity_remember_me"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOutline"
        android:theme="@style/checkBox"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/inputLayoutPassword"
        tools:ignore="RtlSymmetry" />

    <com.alexP.socialnetwork.utils.customViews.GoogleCustomButton
        android:id="@+id/buttonSignInGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/auth_layout_button_signInGoogle_margin_bottom"
        app:layout_constraintBottom_toTopOf="@id/textViewOrLabel"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewOrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/auth_textView_orLabel_bottom_margin"
        android:text="@string/auth_activity_or"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@id/buttonRegister"
        app:layout_constraintEnd_toEndOf="@id/inputLayoutEmail"
        app:layout_constraintStart_toStartOf="@id/inputLayoutEmail" />

    <Button
        android:id="@+id/buttonRegister"
        style="@style/Assignment1.BorderedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/auth_button_register_bottom_margin"
        android:paddingVertical="@dimen/auth_activity_button_register_paddingVertical"
        android:text="@string/auth_activity_register"
        android:textAllCaps="true"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@id/textViewTermsAndConditions"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:strokeColor="?attr/colorAccent" />

    <TextView
        android:id="@+id/textViewTermsAndConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/auth_textView_termsAndConditions_bottom_margin"
        android:gravity="center_horizontal"
        android:text="@string/auth_activity_terms_and_conditions"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@id/textViewNoAccount"
        app:layout_constraintEnd_toEndOf="@id/buttonRegister"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@id/buttonRegister" />

    <TextView
        android:id="@+id/textViewNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_activity_already_have_an_account"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOutline"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@id/textViewSignUp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_textView_SignIn_start_margin"
        android:text="@string/auth_activity_sign_in"
        android:textAppearance="?attr/textAppearanceLabelSmall"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewNoAccount"
        app:layout_constraintTop_toTopOf="@id/textViewNoAccount" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>